<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:theme="@style/Theme.MobileSdkExampleApp.NoActionBar"
	tools:context=".MainActivity">

	<data />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/launch_background">

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/vertical_middle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintGuide_percent="0.5" />

		<ImageView
			android:id="@+id/logo"
			android:layout_width="96dp"
			android:layout_height="96dp"
			android:layout_marginBottom="32dp"
			android:contentDescription="@string/nav_header_desc"
			app:layout_constraintBottom_toTopOf="@id/vertical_middle"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:srcCompat="@drawable/logo_launch" />

		<TextView
			android:id="@+id/app_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:maxLines="1"
			android:text="@string/nav_header_title"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
			android:textColor="@color/on_primary"
			android:textSize="20sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/vertical_middle" />

		<TextView
			android:id="@+id/app_description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:maxLines="1"
			android:text="@string/nav_header_subtitle"
			android:textColor="@color/secondary"
			android:textSize="20sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/app_name" />

		<ProgressBar
			android:id="@+id/app_loading_spinner"
			style="?android:attr/progressBarStyle"
			android:layout_width="32dp"
			android:layout_height="32dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@id/app_loading_label"
			app:layout_constraintHorizontal_chainStyle="packed"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/app_description" />

		<TextView
			android:id="@+id/app_loading_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="4dp"
			android:text="@string/initializing_app"
			android:textAlignment="center"
			android:textColor="@color/on_primary"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@id/app_loading_spinner"
			app:layout_constraintTop_toTopOf="@id/app_loading_spinner" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
