<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/fragment_background"
	tools:context=".MainActivity">

	<data>

		<import type="android.view.View" />

		<import
			alias="Helpers"
			type="de.iplabs.mobile_sdk_example_app.ui.helpers.HelpersKt" />

		<variable
			name="mainActivityViewModel"
			type="de.iplabs.mobile_sdk_example_app.viewmodels.MainActivityViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.constraintlayout.widget.Group
			android:id="@+id/filled_cart_group"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="@{mainActivityViewModel.isCartEmpty() == false ? View.VISIBLE : View.GONE}"
			app:constraint_referenced_ids="cart_item_list, footer" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/cart_item_list"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginVertical="@dimen/material_card_margin_half"
			android:fadingEdgeLength="16dp"
			android:requiresFadingEdge="vertical"
			app:layout_constraintBottom_toTopOf="@id/footer"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/footer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/background"
			android:orientation="vertical"
			android:paddingTop="8dp"
			android:paddingBottom="16dp"
			app:layout_constraintBottom_toBottomOf="parent">

			<TextView
				android:id="@+id/total_price_label"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginBottom="8dp"
				android:text="@string/total_price"
				android:textAlignment="textEnd"
				android:textSize="20sp"
				android:textStyle="bold"
				app:layout_constraintBottom_toTopOf="@id/continue_shopping"
				app:layout_constraintEnd_toStartOf="@id/total_price"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@id/footer" />

			<TextView
				android:id="@+id/total_price"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginBottom="8dp"
				android:text="@{Helpers.toPriceString(mainActivityViewModel.getTotalPrice())}"
				android:textAlignment="textEnd"
				android:textSize="20sp"
				android:textStyle="bold"
				app:layout_constraintBaseline_toBaselineOf="@id/total_price_label"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/total_price_label"
				app:layout_constraintWidth_percent="0.2"
				tools:text="0.00" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/continue_shopping"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:text="@string/continue_shopping"
				app:icon="@drawable/icon_previous"
				app:iconGravity="textStart"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@id/proceed_to_checkout"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/total_price_label" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/proceed_to_checkout"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="16dp"
				android:enabled="@{!mainActivityViewModel.isCartEmpty()}"
				android:text="@string/proceed_to_checkout"
				app:icon="@drawable/icon_next"
				app:iconGravity="textEnd"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/continue_shopping"
				app:layout_constraintTop_toTopOf="@id/continue_shopping" />
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.Group
			android:id="@+id/empty_cart_group"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="@{mainActivityViewModel.isCartEmpty() == true ? View.VISIBLE : View.GONE}"
			app:constraint_referenced_ids="empty_cart_icon, empty_cart_label, shop_now" />

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/vertical_middle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintGuide_percent="0.5" />

		<ImageView
			android:id="@+id/empty_cart_icon"
			android:layout_width="96dp"
			android:layout_height="96dp"
			android:layout_marginBottom="8dp"
			android:contentDescription="@string/warning_icon"
			android:src="@drawable/icon_menu_cart"
			app:layout_constraintBottom_toTopOf="@id/vertical_middle"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

		<TextView
			android:id="@+id/empty_cart_label"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/cart_empty"
			android:textAlignment="center"
			android:textSize="20sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/vertical_middle" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/shop_now"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="16dp"
			android:text="@string/shop_now"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/empty_cart_label" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
