<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<import type="android.view.View" />

		<import
			alias="Helpers"
			type="de.iplabs.mobile_sdk_example_app.ui.helpers.HelpersKt" />

		<variable
			name="cartItem"
			type="de.iplabs.mobile_sdk_example_app.data.cart.CartItem" />

		<variable
			name="fragment"
			type="de.iplabs.mobile_sdk_example_app.fragments.CartFragment" />

		<variable
			name="popupMenuAnchor"
			type="View" />
	</data>

	<com.google.android.material.card.MaterialCardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/material_card_margin_full"
		android:layout_marginVertical="@dimen/material_card_margin_half"
		android:clickable="true"
		android:onLongClick="@{() -> fragment.showCartItemModificationPopupMenu(cartItem, popupMenuAnchor)}"
		app:cardCornerRadius="8dp"
		app:cardElevation="@dimen/material_card_margin_elevation">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp">

			<ImageView
				android:id="@+id/cart_item_preview"
				android:layout_width="82dp"
				android:layout_height="82dp"
				android:contentDescription="@string/cart_item_preview_description"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:src="@{cartItem.cartProject.previewImage != null ? Helpers.toDrawable(cartItem.cartProject.previewImage, context) : @drawable/icon_no_preview}" />

			<TextView
				android:id="@+id/cart_item_product_name"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:maxLines="1"
				android:paddingHorizontal="12dp"
				android:paddingVertical="2dp"
				android:text="@{cartItem.cartProject.title != null ? cartItem.cartProject.title : cartItem.cartProject.productName}"
				android:textSize="18sp"
				android:textStyle="bold"
				app:layout_constraintEnd_toStartOf="@id/cart_item_popup_trigger"
				app:layout_constraintStart_toEndOf="@id/cart_item_preview"
				app:layout_constraintTop_toTopOf="parent"
				tools:text="Eileen’s Birthday Gift" />

			<ImageButton
				android:id="@+id/cart_item_popup_trigger"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:contentDescription="@string/popup_menu_trigger_description"
				android:onClick="@{() -> fragment.showCartItemModificationPopupMenu(cartItem, popupMenuAnchor)}"
				android:src="@drawable/icon_popup"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/cart_item_options"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:maxLines="1"
				android:paddingHorizontal="12dp"
				android:paddingVertical="2dp"
				android:text="@{Helpers.asString(cartItem.cartProject.options)}"
				android:textSize="16sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="@id/cart_item_product_name"
				app:layout_constraintTop_toBottomOf="@id/cart_item_product_name"
				tools:text="Handedness: Right, Color: Blue" />

			<TextView
				android:id="@+id/cart_item_project_title"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:maxLines="1"
				android:paddingHorizontal="12dp"
				android:paddingVertical="2dp"
				android:text="@{`ID ` + cartItem.cartProject.id}"
				android:textSize="16sp"
				app:layout_constraintEnd_toStartOf="@id/cart_item_decrease_count"
				app:layout_constraintStart_toStartOf="@id/cart_item_options"
				app:layout_constraintTop_toBottomOf="@id/cart_item_options"
				tools:text="ID 12345678" />

			<ImageButton
				android:id="@+id/cart_item_decrease_count"
				android:layout_width="26dp"
				android:layout_height="26dp"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:clickable="@{cartItem.isQuantityDecreasable}"
				android:contentDescription="@string/decrease_count"
				android:enabled="@{cartItem.isQuantityDecreasable}"
				android:onClick="@{() -> fragment.decreaseItemQuantity(cartItem)}"
				android:src="@drawable/icon_decrease"
				app:layout_constraintBottom_toBottomOf="@id/cart_item_price"
				app:layout_constraintEnd_toStartOf="@id/cart_item_count"
				app:layout_constraintTop_toBottomOf="@id/cart_item_options" />

			<TextView
				android:id="@+id/cart_item_count"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ellipsize="end"
				android:maxLines="1"
				android:paddingHorizontal="8dp"
				android:paddingVertical="2dp"
				android:text="@{String.valueOf(cartItem.quantity) + '×'}"
				android:textSize="16sp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@id/cart_item_increase_count"
				app:layout_constraintTop_toBottomOf="@id/cart_item_options"
				tools:text="1×" />

			<ImageButton
				android:id="@+id/cart_item_increase_count"
				android:layout_width="26dp"
				android:layout_height="26dp"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:contentDescription="@string/increase_count"
				android:onClick="@{() -> fragment.increaseItemQuantity(cartItem)}"
				android:src="@drawable/icon_increase"
				app:layout_constraintBottom_toBottomOf="@id/cart_item_price"
				app:layout_constraintEnd_toStartOf="@id/cart_item_price"
				app:layout_constraintTop_toBottomOf="@id/cart_item_options" />

			<TextView
				android:id="@+id/cart_item_price"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingVertical="2dp"
				android:paddingStart="12dp"
				android:text="@{Helpers.toPriceString(cartItem.totalPrice)}"
				android:textAlignment="viewEnd"
				android:textSize="16sp"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				tools:ignore="RtlSymmetry"
				tools:text="9.99 €" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</com.google.android.material.card.MaterialCardView>
</layout>
